# kubernetesStatusChecker

./: BUILD.bazel  Dockerfile  Dockerfile.multistage  README.md  bazel-bin  bazel-k8sjobs  bazel-out  bazel-testlogs  bb2.yaml  go.mod  go.sum  main.go
client/: BUILD.bazel  client.go
gRPCServer/: BUILD.bazel  gRPCServer.go
httpServer/: BUILD.bazel  httpServer.go  httpServer_test.go
k8sStatus/: BUILD.bazel  statusChecker.go  statusChecker_test.go
k8sjobshelm/: Chart.yaml  values.yaml
k8sjobshelm/templates/: NOTES.txt  _helpers.tpl  clusterRole.yaml  clusterRoleBinding.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8sjobshelm/templates/tests/: test-connection.yaml
statusProto/: BUILD.bazel  statusFinder.pb.go  statusFinder.proto  statusFinder_grpc.pb.go
